# tephra

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  install.sh  tephra.service
crates/client/: Cargo.toml  PRD.md
crates/client/src/: alerts.rs  app.rs  main.rs  message.rs
crates/client/src/discovery/: mod.rs
crates/client/src/net/: api_types.rs
crates/client/src/node/: connection.rs  history.rs  mod.rs
crates/client/src/theme/: colors.rs  mod.rs
crates/client/src/view/: compare.rs  dashboard.rs  detail.rs  mod.rs  node_card.rs  settings.rs  workload_overlay.rs
crates/client/src/view/charts/: core_grid.rs  line_chart.rs  mod.rs  multi_line_chart.rs  sparkline.rs
crates/client/src/view/components/: add_node_dialog.rs  metric_pill.rs  mod.rs  status_badge.rs
crates/server/: Cargo.toml  openapi.json
crates/server/src/: api.rs  discovery.rs  lib.rs  main.rs  models.rs  monitor.rs  openapi.rs
crates/server/src/monitor/: linux.rs  mod.rs  windows.rs
crates/server/tests/: api.rs
